--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </center>
         <br>
         <label>Address</label>
-        <input type="text" id="address" value="ws://broker.hivemq.com:8000/mqtt">
+        <input type="text" id="address" value="wss://test.mosquitto.org:8081/mqtt">
         <br>
         <label>Status</label>
         <input id="status" name="status">
